increase auth form font size to prevent auto zoom on mobile browsers

--- a/client/src/styles/auth_forms.scss
+++ b/client/src/styles/auth_forms.scss
@@ -8,17 +8,18 @@
   }
   input[type=username], input[type="password"], button[type=submit], div.user-text {
     padding: 8px 10px;
-    margin: 8px 4px;
+    margin: 8px 8px 8px 0px;
     max-width: 30%;
+    font-size: 16px;
   }
   button[type=submit] {
-    max-width: 20%;
     background-color: #1E3553;
     color: #ffffff;
   }
   button[type=submit]:hover {
     cursor: pointer;
     border-radius: 0px;
+
   }
   div.user-text {
     display: inline-block;
